Fix poster overlapping content in JMP

--- a/CSS/scyfin-theme.css
+++ b/CSS/scyfin-theme.css
@@ -739,17 +739,23 @@ html,
 .layout-desktop .detailPagePrimaryContent {
     padding-left: 20.4vw !important;
 }
-/* Padding for 2:3 posters */
-.layout-desktop .detailPageWrapperContainer:has(.detailImageContainer .portraitCard) .detailPagePrimaryContent {
+.layout-desktop .detailPageWrapperContainer .detailPagePrimaryContent {
     min-height: 29vw !important;
 }
-/* Padding for 1:1 posters */
-.layout-desktop .detailPageWrapperContainer:has(.detailImageContainer .squareCard) .detailPagePrimaryContent {
-    min-height: 20vw !important;
-} 
-/* Padding for 16:9 posters */
-.layout-desktop .detailPageWrapperContainer:has(.detailImageContainer .backdropCard) .detailPagePrimaryContent {
-    min-height: 12vw !important;
+/* Check for :has support (screw JMP) */
+@supports selector(:has(*)) {
+    /* Padding for 2:3 posters */
+    .layout-desktop .detailPageWrapperContainer:has(.detailImageContainer .portraitCard) .detailPagePrimaryContent {
+        min-height: 29vw !important;
+    }
+    /* Padding for 1:1 posters */
+    .layout-desktop .detailPageWrapperContainer:has(.detailImageContainer .squareCard) .detailPagePrimaryContent {
+        min-height: 20vw !important;
+    } 
+    /* Padding for 16:9 posters */
+    .layout-desktop .detailPageWrapperContainer:has(.detailImageContainer .backdropCard) .detailPagePrimaryContent {
+        min-height: 12vw !important;
+    }
 }
 
 /* Move track selection box */
